--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "@emotion/is-prop-valid": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "framer-motion": "latest"
+    "framer-motion": "latest",
+    "three": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
